--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,6 @@
     --font: "Nunito Sans", sans-serif;
 }
 
-body {
-    background-color: var(--bg-color);
-    color: var(--primary-color);
-    font-family: var(--font);
-}
-/* código omitido */
 
 body {
     background-color: var(--bg-color);
@@ -21,7 +15,25 @@ body {
     height: 100vh;
     margin: 0;
 }
-/* código omitido */
+
+h1 {
+    font-size: 2rem;
+    color: var(--bg-color);
+    font-weight: 700;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+}
+
+
+header {
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 1px;
+}
 
 nav a {
     text-decoration: none;
@@ -29,7 +41,12 @@ nav a {
      margin: 0 2rem 1rem 0rem;
      font-size: 1.2rem;
 }
-/* código omitido */
+
+nav a:hover {
+    text-decoration: underline;
+    transform: scale(0.90);
+    transition: transform 0.1s;
+}
 
 footer {
     display: flex;
